k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-docservice
spec:
  selector:
    app: django-docservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
