k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-docservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: django-docservice.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: django-docservice
            port:
              number: 80
